# OMEGA

./: .gitignore  CMakeLists.txt  Compact code.cmd  Project_structure.md  README.md  btc_live_simulation_30days.csv  main.py  pyproject.toml  requirements.txt  sample.txt
.github/workflows/: ci.yml
benchmarks/: baseline.json  throughput.md
benchmarks/datasets/: README.md  config.json
checkpoints/: epoch_0000.pkl  epoch_0001.pkl  epoch_0002.pkl  epoch_0003.pkl  epoch_0004.pkl  training_history.json
configs/: nlp.json  tts.json  tts_text.json
experiments/: __init__.py  profile_acp.py  synthetic_benchmark.py
omega/brain/: regime.py  symbolic.py
omega/cli/: train.py
omega/core/: acp.py  kernels.py  lpc.py
omega/core/native/: __init__.py
omega/data/: loader.py  text_loader.py
omega/engine/: pipeline.py  scheduler.py
omega/memory/: persistent.py
omega/mods/: __init__.py  registry.py
omega/mods/base/: __init__.py  dataset.py  encoder.py
omega/mods/nlp/: __init__.py  dataset.py  encoder.py
omega/mods/tts/: __init__.py  dataset.py  encoder.py
omega/mods/tts_text/: __init__.py  dataset.py  decoder.py  encoder.py
omega/nlp/: continuous.py
omega/utils/: checkpoint.py
scripts/: __init__.py  bench_quick.py  generate_benchmark_data.py  run_stress.py
src/native/: arnoldi.cpp
tests/: test_dtype.py  test_kernels.py  test_loader.py  test_scheduler.py  test_tts_module.py  test_tts_text_module.py
