[build-system]
requires = [
  "scikit-build-core>=0.8",
  "pybind11>=2.11",
  "numpy>=1.24",
]
build-backend = "scikit_build_core.build"

[project]
name = "omega-acp"
version = "0.4.0"
description = "OMEGA Arnoldi-Causal Projection prototype with optional native kernels."
readme = "README.md"
authors = [{name = "OMEGA Research"}]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "numba>=0.59",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.0",
  "pybind11>=2.11",
  "ruff>=0.4.0",
]

[tool.scikit-build]
wheel.packages = ["omega", "experiments", "scripts"]
wheel.exclude = ["tests", "benchmarks", ".github"]

[tool.scikit-build.cmake]
minimum-version = "3.18"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
  "tests",
]
markers = [
  "perf: performance-sensitive tests",
  "slow: slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
